--- a/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
@@ -16,6 +16,10 @@
 */
 -->
 <resources>
-    <dimen name="rounded_corner_content_padding">12dp</dimen>
+    <dimen name="rounded_corner_content_padding">14dp</dimen>
     <dimen name="system_icons_keyguard_padding_end">4dp</dimen>
+    <dimen name="rounded_corner_radius">31dp</dimen>
+    <dimen name="rounded_corner_radius_top">102.0px</dimen>
+    <dimen name="rounded_corner_radius_bottom">87.0px</dimen>
+    <dimen name="status_bar_extra_padding">12dp</dimen>
 </resources>
