--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -601,4 +601,7 @@
     <!-- Whether device supports in-display fingerprint when screen is turned off -->
     <bool name="config_supportsInDisplayFingerprintGesture">true</bool>
 
+     <!-- Whether device has screen off FOD support -->
+     <bool name="config_supportScreenOffFod">true</bool>
+
 </resources>
